--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nuxt": "^3.11.1",
     "swiper": "^11.0.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-perfect-scrollbar": "^2.0.0"
   },
   "devDependencies": {
     "sass": "^1.72.0"
